// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#SideBar render 1`] = `
<Fragment>
  <ContextConsumer>
    <Component />
  </ContextConsumer>
  <SideNav
    chat={
      <div>
        chat
      </div>
    }
    debug={
      <div>
        debug
      </div>
    }
    onOpenRegister={[Function]}
    onOpenSignIn={[Function]}
    onSaveLanguage={[MockFunction]}
    subscription={
      <div>
        subscription
      </div>
    }
  />
</Fragment>
`;

exports[`#SideBar render with modal 1`] = `
<Fragment>
  <ContextConsumer>
    <Component />
  </ContextConsumer>
  <SideNav
    chat={
      <div>
        chat
      </div>
    }
    debug={false}
    onOpenRegister={[Function]}
    onOpenSignIn={[Function]}
    onSaveLanguage={[MockFunction]}
    subscription={
      <div>
        subscription
      </div>
    }
  />
  <Modal
    onClose={[Function]}
  >
    <Login
      onOpenMyBooking={[Function]}
      onOpenRegister={[Function]}
      onOpenSignIn={[Function]}
      onSaveToken={[MockFunction]}
      open="myBooking"
    />
  </Modal>
</Fragment>
`;
